# edric

./: Cargo.toml
src/: main.rs
src/api/: mod.rs
src/model/: faction.rs  mod.rs
